# ChessGS

./: CMakeLists.txt  README.md  build.bat  build.sh  engine.cpp  run.bat  run.sh
include/: bitboard.h  chess_types.h  engine.h  evaluation.h  lookup_tables.h  pst.h  window.h
py-src/: build_dataset.py  config.toml  infer.py  position.py  rewards.py  stockfish_oracle.py  test_rewards.py  train.py
src/: bitboard.cpp  book.cpp  chess_inline_functions.cpp  chess_types.cpp  engine.cpp  evaluation.cpp  lookup_tables.cpp  main.cpp  pst.cpp  search.cpp  window.cpp
